--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-	<h1>Hello Coursera. It is great to be here</h1>
+	<h1>Hello Coursera. It is great to be here!!</h1>
 
 </body>
 </html>
